--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">GT</a>
+            <a class="navbar-brand" href="#home">GT</a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
@@ -56,7 +56,7 @@
             id="bs-example-navbar-collapse-1"
           >
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">Home</a></li>
+              <li><a href="#home"></a></li>
               <li><a href="#about-me">About</a></li>
               <li><a href="#skills">Skills</a></li>
               <li><a href="#projects">Projects</a></li>
@@ -875,7 +875,7 @@
 
         <div class="footer-text2 col-12 col-lg-6">
           <div class="shortcuts">
-            <a href="#">HOME</a>
+            <a href="#Home">HOME</a>
             <a href="#about-me">ABOUT</a>
             <a href="#skills">SKILLS</a>
             <a href="#projects">PROJECTS</a>
