--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             id="bs-example-navbar-collapse-1"
           >
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#home"></a></li>
+              <li><a href="#home">Home</a></li>
               <li><a href="#about-me">About</a></li>
               <li><a href="#skills">Skills</a></li>
               <li><a href="#projects">Projects</a></li>
