--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#home">GT</a>
+            <a class="navbar-brand" href="#">GT</a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
@@ -56,7 +56,7 @@
             id="bs-example-navbar-collapse-1"
           >
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#home">Home</a></li>
+              <li><a href="#">Home</a></li>
               <li><a href="#about-me">About</a></li>
               <li><a href="#skills">Skills</a></li>
               <li><a href="#projects">Projects</a></li>
