hamburger-menu added class

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="navbar-header">
             <button
               type="button"
-              class="navbar-toggle collapsed"
+              class="navbar-toggle collapsed hamburger-menu"
               data-toggle="collapse"
               data-target="#bs-example-navbar-collapse-1"
               aria-expanded="false"
