--- a/index.html
+++ b/index.html
@@ -797,6 +797,7 @@
               <div class="col-sm-8">
                 <input
                   type="name"
+                  name="name"
                   class="form-control"
                   placeholder="Your Name"
                   required
@@ -810,6 +811,7 @@
               <div class="col-sm-8">
                 <input
                   type="email"
+                  name="email"
                   class="form-control"
                   placeholder="Your Email"
                   required
@@ -826,6 +828,7 @@
                   class="form-control"
                   rows="3"
                   required
+                  name="message"
                   placeholder="Your Message"
                 ></textarea>
               </div>
