--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Gerson-Tiongson-Portfolio</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="shortcut icon" type="image/png" href="images/GT.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&display=swap"
       rel="stylesheet"
