--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           data-aos-duration="1500"
           data-aos-delay="600"
         >
-          <h3>My name is <span>Gerson Tiongson </span></h3>
+          <h3>hey there! this is <span>Gerson Tiongson </span></h3>
           <p>
             I'm a Senior High School Instructor at
             <a href="https://aics.edu.ph/" target="_blank">
@@ -874,7 +874,6 @@
               <div class="email">
                 <i class="fas fa-envelope"></i>
                 <div class="e-address">
-                  <h6>gerson.tiongson.12314@gmail.com</h6>
                   <h6>tiongsongerson@gmail.com</h6>
                 </div>
               </div>
