--- a/index.html
+++ b/index.html
@@ -182,17 +182,14 @@
         >
           <h3>hey there! this is <span>Gerson Tiongson </span></h3>
           <p>
-            I'm a Senior High School Instructor at
-            <a href="https://aics.edu.ph/" target="_blank">
-              Asian Institute of Computer Studies</a
-            >
-            and currently doing some web dev stuff. I get into web development
-            last year and currently expanding my knowledge and experiences by
-            letting myself into a Full Stack Development training. Also, I took
-            some certification courses before, about web development in Udemy,
-            watching relevant videos in YouTube and doing personal projects for
-            my self improvement and as part of my training. Check my CV for more
-            details about me.
+            I'm a UI Designer, Front End Developer and a Senior High School
+            Instructor. I enjoy taking ideas and turning them into simple and
+            beatiful interface designs. I also love the logic and structure of
+            coding.
+          </p>
+          <p>
+            When I'm not coding. You'll find me playing video games or doing
+            some charcoal or colored pencil art.
           </p>
 
           <button class="about-btn">
@@ -300,11 +297,11 @@
           >
             <div class="col skill-item">
               <img
-                src="images/java.png"
+                src="images/Angular_.png"
                 class="img-responsive"
-                alt="java logo"
+                alt="angular logo"
               />
-              <h4>JAVA</h4>
+              <h4>ANGULAR</h4>
             </div>
           </div>
 
@@ -396,11 +393,11 @@
           >
             <div class="col skill-item">
               <img
-                src="images/dot-net.png"
+                src="images/typescript.png"
                 class="img-responsive"
                 alt="dot net image"
               />
-              <h4>DOT DET</h4>
+              <h4>TYPESCRIPT</h4>
             </div>
           </div>
         </div>
@@ -778,7 +775,7 @@
           </div>
           <form
             class="form-horizontal"
-            action="https://formsubmit.co/gerson.tiongson.12314@gmail.com"
+            action="https://formsubmit.co/tiongsongerson@gmail.com"
             method="POST"
           >
             <input
