--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
           </p>
 
           <button class="about-btn">
-            <a href="data/Gerson-Tiongson-CV.pdf" download>Download CV</a>
+            <a href="data/Gerson-Tiongson-Resume.pdf" download>Download CV</a>
           </button>
         </div>
       </div>
