--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
           data-aos-duration="1500"
           data-aos-delay="600"
         >
-          <h3>hey there! this is <span>Gerson Tiongson </span></h3>
+          <h3>this is <span>Gerson Tiongson </span></h3>
           <p>
             I'm a UI Designer, Front End Developer and a Senior High School
             Instructor. I enjoy taking ideas and turning them into simple and
-            beatiful interface designs. I also love the logic and structure of
+            beautiful interface designs. I also love the logic and structure of
             coding.
           </p>
           <p>
