--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
                 <p>
                   Click the image to view the live site or check
                   <a
-                    href="https://www.frontendmentor.io/profile/Quandok"
+                    href="https://www.frontendmentor.io/profile/Zeras12314"
                     target="_blank"
                     >My Frontend Mentor Profile</a
                   >
@@ -724,7 +724,7 @@
                 <h3>HTML, CSS & JAVASCRIPT</h3>
                 Click the image to view the live site or check
                 <a
-                  href="https://www.frontendmentor.io/profile/Quandok"
+                  href="https://www.frontendmentor.io/profile/Zeras12314"
                   target="_blank"
                   >My Frontend Mentor Profile</a
                 >
@@ -750,7 +750,7 @@
                 <h3>HTML, CSS & JQUERY</h3>
                 Click the image to view the live site or check
                 <a
-                  href="https://www.frontendmentor.io/profile/Quandok"
+                  href="https://www.frontendmentor.io/profile/Zeras12314"
                   target="_blank"
                   >My Frontend Mentor Profile</a
                 >
